<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_inapp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUpgrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/premium_upgrade"
            android:textColor="@color/inappColorTextPrimary"
            android:textSize="30dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <LinearLayout
            android:id="@+id/llAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUpgrade">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llItemSubs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/llAccess">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                tools:itemCount="3"
                tools:listitem="@layout/item_iap_product" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_continue"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:paddingHorizontal="48dp"
            android:paddingVertical="10dp"
            android:text="@string/continue_str"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llItemSubs" />

        <TextView
            android:id="@+id/tvContinueDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/continue_limited_version"
            android:textColor="@color/inappColorTextSecondary"
            android:textSize="14dp"
            app:layout_constraintTop_toBottomOf="@id/tvContinue" />

        <LinearLayout
            android:id="@+id/linearLayoutPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingHorizontal="36dp"
            app:layout_constraintTop_toBottomOf="@+id/tvContinueDes">

            <TextView
                android:id="@+id/tvTermOfUse"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="start"
                android:text="@string/term_of_use"
                android:textColor="@color/inappColorTextSecondary"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:gravity="end"
                android:text="@string/privacy_policy"
                android:textColor="@color/inappColorTextSecondary"
                android:textSize="14dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:fontFamily="@font/roboto_regular"
            android:paddingHorizontal="18dp"
            android:paddingBottom="50dp"
            android:text="@string/policy_text"
            android:textColor="@color/inappColorTextSecondary"
            android:textSize="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutPolicy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
