<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvPopular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_popular"
        android:elevation="10dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/most_popular"
        android:textColor="@color/white"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/llProductInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/rlProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_iap">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clFreeTrial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:minHeight="80dp">

                    <TextView
                        android:id="@+id/tvFreeTrial"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:text="@string/free_trial_name"
                        android:textColor="@color/inappColorTextPrimary"
                        android:textSize="24dp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvFreeDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:text="@string/free_trial_desc"
                        android:textColor="@color/inappColorTextPrimary"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvFreeTrial" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cslProductContent"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:id="@+id/llProductDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tvProductPrice"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tvProductName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="@font/roboto_medium"
                            android:maxLines="2"
                            android:textColor="@color/inappColorTextPrimary"
                            android:textSize="20dp" />

                        <TextView
                            android:id="@+id/tvProductDes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:fontFamily="@font/roboto_light"
                            android:maxLines="2"
                            android:text="@string/limited_time_offer"
                            android:textColor="@color/inappColorTextPrimary"
                            android:textSize="12dp" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvProductPrice"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textColor="@color/inappColorTextPrimary"
                        android:textSize="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="23000d" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>